JOHNZON-360 Make buildable and testable on Java 17 (#79)
Signed-off-by: Raymond Augé <rotty3000@apache.org>