@@ -42,14 +42,16 @@
     <johnzon.site.url>https://svn.apache.org/repos/asf/johnzon/site/publish/</johnzon.site.url>
     <pubsub.url>scm:svn:${johnzon.site.url}</pubsub.url>
     <staging.directory>${project.build.directory}/site</staging.directory>
-    <felix.plugin.version>4.0.0</felix.plugin.version>
+    <felix.plugin.version>5.1.4</felix.plugin.version>
     <bnd.version.policy>[$(version;==;$(@)),$(version;+;$(@)))</bnd.version.policy>
+    <bnd.version>6.1.0</bnd.version>
     <java-compile.version>1.8</java-compile.version>
     <cxf.version>3.4.1</cxf.version>
     <checkstyle.version>2.15</checkstyle.version> <!-- checkstyle > 2.15 version do not support java 6 -->
     <!-- JVM values for surefire plugin -->
     <surefire.jvm.params>-Xms1024m -Xmx2048m -Dfile.encoding=UTF-8</surefire.jvm.params>
     <owb.version>2.0.23</owb.version>
+    <arquillian.jvm.args></arquillian.jvm.args>
   </properties>
 
   <modules>
@@ -447,6 +449,13 @@
             <Bundle-DocURL>http://johnzon.apache.org/</Bundle-DocURL>
           </instructions>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>biz.aQute.bndlib</artifactId>
+            <version>${bnd.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
 
       <plugin>
@@ -785,6 +794,32 @@
       <properties>
         <checkstyle.version>2.17</checkstyle.version>
       </properties>
+    </profile>
+
+    <profile>
+        <id>jdk9+</id>
+        <activation>
+            <jdk>[9,)</jdk>
+        </activation>
+        <properties>
+            <arquillian.jvm.args>
+                --add-opens=java.base/java.lang=ALL-UNNAMED
+            </arquillian.jvm.args>
+        </properties>
+    </profile>
+
+    <profile>
+        <id>jdk18+</id>
+        <activation>
+            <jdk>[18,)</jdk>
+        </activation>
+        <properties>
+            <arquillian.jvm.args>
+                --add-opens=java.base/java.lang=ALL-UNNAMED
+                -Xmx512m -Xms256m -XX:ReservedCodeCacheSize=64m -Dtomee.httpPort=38383
+                -Djava.opts=
+            </arquillian.jvm.args>
+        </properties>
     </profile>
   </profiles>
 </project>
